WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
11471
uninitialized member being tested before set
https://bugs.webkit.org/show_bug.cgi?id=11471
Summary
uninitialized member being tested before set
David Carson
Reported
2006-10-31 11:42:24 PST
In Frame.cpp, the variable m_beganSelectingText (defined in FramePrivate.h) is sometimes being tested in handleMouseReleaseEvent() before it has been initialized to any value.
Attachments
patch to init value to false
(956 bytes, patch)
2006-10-31 11:46 PST
,
David Carson
ggaren
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
David Carson
Comment 1
2006-10-31 11:46:05 PST
Created
attachment 11308
[details]
patch to init value to false
Geoffrey Garen
Comment 2
2006-10-31 13:32:13 PST
Comment on
attachment 11308
[details]
patch to init value to false r=me
mitz
Comment 3
2006-10-31 13:48:11 PST
Please fix the first line of the ChangeLog when committing.
Anders Carlsson
Comment 4
2006-11-02 19:14:20 PST
Committed revision 17550
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug