2006-11-02  David Carson  <dacarson@gmail.com>

Reviewed by Geoff, landed by Anders.

        Fix for: http://bugs.webkit.org/show_bug.cgi?id=11471
        Initializing variable in constructor.

        * page/FramePrivate.h:
        (WebCore::FramePrivate::FramePrivate):


git-svn-id: svn://svn.chromium.org/blink/trunk@17550 bbb929c8-8fbe-4397-9dbb-9b2b20218538