third_party/WebKit/WebCore/page/FramePrivate.h
@@ -116,6 +116,7 @@ namespace WebCore {
             , m_inViewSourceMode(false)
             , frameCount(0)
             , m_prohibitsScrolling(false)
+            , m_beganSelectingText(false)
         {
         }
 
